resources/graphClient/graphClient.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Microsoft Corporation. All rights reserved.
 *  Licensed under the MIT License. See License.txt in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
 * {
    margin: 0;
    padding: 0;
    box-sizing: content-box;
}

html {
    width: 100%;
    height: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background: #1e1e1e;
    color: #cccccc;
    font-size: 16px;
    box-sizing: border-box;
    padding: 0 10px;
    height: 100%;
}

#active-frame {
    width: 100%;
    height: 100%;
}

[disabled] {
    opacity: 0.7;
}

#states {
    width: 100%;
    height: 100%;
}

#debugLog {
    height: 10%;
}

h1 {
    color: white;
    font-weight: 100;
}

#title {
    float: left;
    margin-top: 15px;
    margin-left: 5px;
}

#cosmos {
    float: left;
    width: 80px;
    margin:11px 0;
}

header + div {
    clear: left;
}

h1 span {
    margin-top: -12px;
}

#debug {
    margin-bottom: 0;
    color: white;
}

.vertex {
    transition: fill .2s;
    fill: #0072c6;
    r: 8px; /* vertex radius */
}

.vertex:hover, .vertex.dragging {
    transition: .2s;
    fill: #00a2e6;
    r: 10px;
}

.edge {
    stroke: #777;
    stroke-width: 1px;
}

#triangle {
    fill: #aaa;
    stroke: #aaa;
}

.label {
    fill: #eee;
}

#resultsBackground {
    width: 100%;
    height: calc(100% - 198px);
    background: #222;
}

.error {
    font-family: arial;
    background: black;
    color: #ff4040;
    border: #802020 1px solid;
    padding: 5px;
    width: 100%;
    font-size: 12pt;
    height: -webkit-fill-available;
}

#queryStatus {
    margin-top: 10px;
    margin-bottom: 4px;
}

#debug h2 {
    color: red;
}

#queryInput {
    font-size: 12pt;
    width: 50%;
    height: 25px;
    border: 0;
    padding: 10px 15px;
    background: #333;
    color: white;
}

button {
    background: #0e639c;
    color: white;
    padding: 10px 25px;
    border: 0;
    height: 25px;
    cursor: pointer;
}

button:active {
    background: #0b4f7d;
}

#executeButton {
    margin-left: 5px
}

.watermark {
    text-align: center;
}

textarea {
    resize: none;
    font-size: 14px;
}

#jsonResults {
    width: 100%;
    height: 100%;
}

/* Style radio buttons to look like underlined toggles */
.toggle-radio-buttons input[type="radio"] {
    /* Don't set display:none because that will mess up accessibility */
    width: 0;
    opacity: 0;
    border: 5px;
    margin: 0;
}

.toggle-radio-buttons {
    margin-bottom: 17px;
    margin-top: 17px;
    margin-left: -4px;
}

.toggle-radio-buttons label {
    color:#aaa;
    padding-bottom: 3px;
    border-bottom: 3px transparent solid;
    margin-right: 18px;
    font-size: 16px;
}

.toggle-radio-buttons input[type="radio"] + label {
    width: 3em;
    cursor: pointer;
}

.toggle-radio-buttons input[type="radio"]:checked:not([disabled]) + label {
    color:white;
    padding-bottom: 3px;
    border-bottom-color:  #0072c6;
}

#jsonResults {
    height: -webkit-fill-available;
    background: transparent;
    color: #cccccc;
    border: 0;
}

#queryWatermark, #graphWatermark {
    padding-top: 18%;
}

#statsBackground {
    height: 38px;
    box-sizing: border-box;
    padding: 12px 15px;
    color: #cccccc;
    background: #222;
    border-top: #454545 1px solid;
    font-size: 10pt;
}

/* Handle visibility of sections depending on current state */

#states:not(.state-empty) #queryWatermark {
    display:none;
}

#states:not(.state-error) #queryError {
    display: none;
}

#states:not(.state-querying) #queryStatus {
    visibility: hidden;
}

#states:not(.state-results) #resultsSection {
    display: none;
}

#states:not(.state-graph-results) #graphSection svg {
    display: none;
}

#states.state-graph-results #graphWatermark {
    display: none;
}

#states:not(.state-graph-results) #stats {
    display: none;
}

#graphSection:not(.active) {
    display:none;
}

#jsonSection:not(.active) {
    display:none;
}

#graphSection svg {
    width: 100%;
}

#jsonResults {
    width: 100%;
}

#stats {
    width: 100%;
}

